--- a/.github/workflows/Build NETGEAR-R7450 Padavan-4.4.yml
+++ b/.github/workflows/Build NETGEAR-R7450 Padavan-4.4.yml
@@ -1,5 +1,5 @@
 # 注意：修改 default:    中的型号为你需要编译的型号，注意名称要与configs/templates/目录下的名字相同
-name: Build NETGEAR-BZV Padavan-4.4
+name: Build NETGEAR-R7450 Padavan-4.4
 
 on:
   workflow_dispatch:
