--- a/.github/workflows/Build_MeIsReallyBa_Padavan-4.4.yml
+++ b/.github/workflows/Build_MeIsReallyBa_Padavan-4.4.yml
@@ -6,7 +6,7 @@ on:
     inputs:
       production:
         description: 设置编译的固件型号,空格分隔.
-        default: "MI-R4A"
+        default: "NETGEAR-R7450"
         required: false
       release:
         description: "是否需要发布到Release? (不发布也可以到Artifacts下载)"
@@ -14,7 +14,7 @@ on:
         required: false
 env:
   TNAME: "${{ github.event.inputs.production }}"
-  REPOSITORY_URL: https://github.com/MeIsReallyBa/padavan-4.4.git
+  REPOSITORY_URL: https://github.com/vipshmily/padavan4.4.git
         
 jobs:
   build:
@@ -72,14 +72,14 @@ jobs:
         mkdir -p /opt/images/                        
     - name: Build Firmware
       run: |
-        if [ -f public/adguardhome.Makefile ] ; then
-        mv -f public/adguardhome.Makefile ${{ env.DIR }}/trunk/user/adguardhome/Makefile
-        echo "Makefile file copy success"
-        else
-        exit 1
-        fi
+        #if [ -f public/adguardhome.Makefile ] ; then
+        #mv -f public/adguardhome.Makefile ${{ env.DIR }}/trunk/user/adguardhome/Makefile
+        #echo "Makefile file copy success"
+        #else
+        #exit 1
+        #fi
         #cp -f public/MI-R4A.config ${{ env.DIR }}/trunk/configs/templates
-        cp -f public/adguardhome.sh ${{ env.DIR }}/trunk/user/adguardhome
+        #cp -f public/adguardhome.sh ${{ env.DIR }}/trunk/user/adguardhome
         cd ${{ env.DIR }}/trunk
         for m in $TNAME;
         do
@@ -182,7 +182,7 @@ jobs:
         echo "CONFIG_FIRMWARE_INCLUDE_MTR=n" >> .config #MTR
         #CPU超频
         echo "CONFIG_FIRMWARE_INCLUDE_OC=y" >> .config #CPU超频开关
-        echo 'CONFIG_FIRMWARE_MT7621_OC="0x3B2"' >> .config #此处填写对应频率的十六进制：1000Mhz=0x312 1100Mhz=0x362 1120Mhz=0x372 1200Mhz=0x3B2
+        echo 'CONFIG_FIRMWARE_MT7621_OC="0x392"' >> .config #此处填写对应频率的十六进制：1000Mhz=0x312 1100Mhz=0x362 1120Mhz=0x372 1200Mhz=0x3B2
         #########################################################################################
         # 自定义添加其它功能请参考源码configs/templates/目录下的config文件。按照上面的格式添加即可
         # 格式如下：
