--- a/.github/workflows/build PSG1218 padavan-3.4.yml
+++ b/.github/workflows/build PSG1218 padavan-3.4.yml
@@ -24,13 +24,13 @@ jobs:
     - uses: actions/checkout@v4
     - uses: hendrikmuhs/ccache-action@v1.2
       with:
-          key: "${{ github.event.inputs.production }}"
+          key: "${{ github.event.inputs.production }}-3.4"
     - uses: actions/setup-go@v5
       with:
           go-version: '1.22'
           check-latest: true
           cache: false
-    - uses: actions/setup-node@v3
+    - uses: actions/setup-node@v4
       with:
           node-version: 20
           check-latest: true      
