--- a/.github/workflows/Build_MeIsReallyBa_Padavan-4.4.yml
+++ b/.github/workflows/Build_MeIsReallyBa_Padavan-4.4.yml
@@ -14,7 +14,7 @@ on:
         required: false
 env:
   TNAME: "${{ github.event.inputs.production }}"
-  REPOSITORY_URL: https://github.com/vipshmily/padavan4.4.git
+  REPOSITORY_URL: https://github.com/vb1980/padavan-4.4.git
         
 jobs:
   build:
